
Version 4.1.5 (05-01-12)
-Missing translation wrapper on post pagination.
-Fixed blowout when all social icons are enabled.
-Removed some additional unused images.
-Mobile Menu now works in phone landscape mode. 
-Fixed bug with broken "next" link in pagination.
-Added French, Swedish and Russian language files.
-Updated jquery.easing for better third-party plugin compatibility.

Version 4.1.4 (04-26-12)
-Removed slight margin-left on box elements in mobile view.
-Fixed strange quotes around HTML elements in Google +1 button code.
-Added Pinterest social icon.
-Added missing $content_width global to theme setup function.
-Added missing tags hook to archive template.
-Updated pagination function with missing translation functions.
-Updated core.pot.

Version 4.1.3 (04-11-12)
-Box element fix for FireFox and IE.

Version 4.1.2 (04-10-12)
-Added Twitter Bar @replies option. 
-Re-added IE Quirks fix. 
-Adjusted full-width callout text wrapper to fix slight blowout issue.
-Added Hebrew translation files.
-CSS fix for box element when viewed on an iPad.
-Removed ereg_replace from Google Font code for PHP 5.3 compatibility. 

Version 4.1.1 (04-03-12)
-Twitter Bar no longer requires Twitter for WordPress plugin.
-Fixed bug in meta-box-class.php causing unidentified index errors.
-Only apply div wrapper to YouTube and Vimeo embeds when responsive design enabled.
-Fixed bug on archive template related to empty categories.
-Removed height:auto for objects in responsive stylesheet. 
-Adjusted "viewport" initial scale for full-width mobile device view. 
-Fixed duplicate "Read More" link bug.
-Added Romanian language files.
-Updated core.pot

Version 4.1 (03-21-12)
-Added Croatian language files.
-Cleaned up core.pot translation template.
-Fix for Google +1 button.
-Fixed custom Callout button image for blog page. 
-Changed <!--more--> link text to "Read more…".
-Added JS to wrap YouTube and Vimeo embeds in flex-video class.

Version 4.0.8 (03-14-12)